# music-forge

./: Cargo.toml
docs/: reqs.md
src/: config.rs  git.rs  main.rs  projects.rs  reaper.rs
src/commands/: adopt.rs  dashboard.rs  ingest.rs  init.rs  log.rs  mod.rs  open.rs  promote.rs  seed.rs  snapshot.rs  status.rs  timeline.rs  watch.rs
