[package]
name = "music-forge"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "music-forge"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
notify-debouncer-mini = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
anyhow = "1"
